--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.1.0",
     "core-js": "^3.4.3",
+    "router": "^1.3.3",
+    "save": "^2.4.0",
     "vue": "^2.6.10",
+    "vue-router": "^3.1.3",
     "vuetify": "^2.1.0"
   },
   "devDependencies": {
