--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.1.0",
     "core-js": "^3.4.3",
@@ -15,6 +16,7 @@
     "save": "^2.4.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
+    "vuelidate": "^0.7.4",
     "vuetify": "^2.1.0"
   },
   "devDependencies": {
@@ -41,7 +43,9 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "rules": {},
+    "rules": {
+      "no-console": "off"
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
