--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.4.3",
     "router": "^1.3.3",
     "save": "^2.4.0",
+    "v-calendar": "^1.0.0-beta.23",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuelidate": "^0.7.4",
