--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.6.2",
-    "axios": "^0.19.0",
+    "axios": "^0.19.1",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.1.0",
     "core-js": "^3.4.3",
@@ -17,6 +17,7 @@
     "save": "^2.4.0",
     "v-calendar": "^1.0.0-beta.23",
     "vue": "^2.6.10",
+    "vue-axios": "^2.1.5",
     "vue-router": "^3.1.3",
     "vuelidate": "^0.7.4",
     "vuetify": "^2.1.0"
