--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "vue-axios": "^2.1.5",
     "vue-router": "^3.1.3",
     "vuelidate": "^0.7.4",
-    "vuetify": "^2.1.0"
+    "vuetify": "^2.1.0",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.9.1",
